--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,3 +98,127 @@ button#botonSignup{
 	color: #ff00bf; /*rosado*/
 	background-color: white;
 }
+/*********************HEADER***************/
+#home{
+	padding-bottom: 100px;
+}
+#bgvid{
+	position: absolute;
+	width: 100%;
+	height: auto;
+	margin: 0;
+	padding: 0;
+	z-index: -1;
+}
+
+.singup{
+	width: 500px;
+	height: auto;
+	background-color: white;
+	margin-left: auto;
+	margin-top: 150px;
+	flex-direction: column;
+	color: #352384;
+	padding: 40px;
+}
+.singup h1{
+	font-size: 40px;
+	font-weight: 600;
+	margin: 0;
+	padding: 0;
+	line-height: 1.1;
+	color: #352384; /*azul*/
+}
+.singup input.hideInput{
+	border: none;
+	border-bottom: 1px solid #BDBCC3;/*azul*/
+	padding: 10px;
+	width: 90%;
+	
+}
+.singup input.showInput{
+	background-image: url(../img/error.png);
+	background-repeat: no-repeat;
+	background-size: 20px 20px;
+	background-position: right;
+}
+
+
+.singup input:focus{
+    outline: none;
+
+}
+.singup button{
+    background-color: #ff00bf; /*rosado*/
+    width: 40%;
+    border: none;
+    color: white;
+    padding: 15px 0;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.singup a{
+	color: #352384; /*azul*/
+	margin-left: 20px;
+	text-decoration: underline;
+}
+.singup .links{
+	margin: 20px 0;
+}
+.singup p{
+	font-size: 12px;
+	line-height: 1.2;
+	padding: 0;
+	margin: 0;
+}
+/***********************Information********************/
+#information{
+	background: linear-gradient(#76278f,#2b1E66);
+	color: white;
+	justify-content: space-around;
+	align-items: center;
+}
+.textInfo{
+	padding: 20px 100px;
+}
+.textInfo h2{
+	font-size: 35px;
+	font-weight: 400;
+	margin: 0;
+	padding: 0;
+	line-height: 1.1;
+}
+#information img{
+	width: 40%;
+	height: 40%;
+	padding: 50px;
+	margin-left: auto;
+	margin-right: 30px;
+}
+/********************VIDEOS*******/
+.videos{
+	flex-direction: row;
+	background-color: white;
+	color: black;
+	padding: 0;
+
+}
+.textVideos{
+	padding: 30px;
+	margin-right: 30px;
+	margin-left: 30px;
+
+}
+.textVideos h6, .textVideos h2{
+	margin: 0;
+	padding: 0;
+}
+.tube iframe{
+	width: 900px;
+	height: 500px;
+	display: block;
+}
